update run script to suppress warnings